# Parallel-Programming-SSU

./: .gitignore  1_1_parallel_for.cpp  1_2_parallel_for_each.cpp  2_transform.cpp  3_parallel_sort.cpp  4_parallel_radixsort.cpp  5_task_group.cpp  6_1_concurrent_vector.cpp  6_2_concurrent_queue.cpp  7_simpson.cpp  8_1_conveyor.cpp  8_2_conveyor-transformer.cpp  CMakeLists.txt  concurrent_col_6.cpp  conveyor-transformer.cpp  conveyor.cpp  sort_3.cpp  transform_2.cpp
share/: CMakeLists.txt
share/include/: Concurrent_Simps.h  Function.h
share/src/: Concurrent_Simps.cpp  Function.cpp
task1/: CMakeLists.txt  Main.cpp
task1/include/: Function.h
task1/src/: Function.cpp  Main.cpp
task2/: CMakeLists.txt  Main.cpp
task3/: CMakeLists.txt
task4/: CMakeLists.txt  Main.cpp
task5/: CMakeLists.txt  Main.cpp
task6/: CMakeLists.txt
task7/: CMakeLists.txt  Main.cpp
task8/: CMakeLists.txt  conveyor-transformer.cpp  conveyor.cpp
